Deprecate InitializationDelay
In the new code, we delay until initialization completes, and then add
some ms to account for time required to start() all threads.

Also, remove dependency on deprecated new Long() constructor.

And add some comments to explain handling of ms time unit.